# north_wind_traders

./: get_utils.py  main.py  pyproject.toml  set_data_utils.py
get_queries/: get_category_by_id_query.sql  get_product_by_id_query.sql
